--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -55,7 +55,8 @@
   cursor: pointer;
   padding: 10px;
   text-align: center;
-  margin-bottom: 5px;
+  margin: 5px;
+  width: 100px;
 }
 .btn:hover {
   color: rgb(247, 59, 59);
@@ -85,6 +86,13 @@
 .btn::-moz-focus-inner {
   border: 0;
 }
+.message {
+  margin: 10px;
+  color: rgb(247, 59, 59);
+}
+.close-icon {
+  cursor: pointer;
+}
 
 @media screen and (max-width: 1000px) {
   .header {
@@ -97,7 +105,7 @@
 }
 
 @media screen and (max-width: 570px) {
-  input {
+  .input-header {
     width: 200px;
   }
   .search {
