--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -15,8 +15,8 @@
   position: fixed;
   margin-top: 50px;
   width: 80%;
-  height: 300px;
   background: #ddd;
+  padding-bottom: 10px;
 }
 .modal-action {
   color: rgb(247, 59, 59);
