--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -28,6 +28,7 @@
   justify-content: space-around;
 }
 .modal-input {
+  margin-top: 4px;
   color: #3c3c3c;
   font-family: Helvetica, Arial, sans-serif;
   font-weight: 500;
