--- a/src/components/Currency/style.css
+++ b/src/components/Currency/style.css
@@ -14,6 +14,9 @@
   color: rgb(204, 226, 164);
   margin-left: 4px;
 }
+.error-text {
+  margin: 5px;
+}
 @media screen and (max-width: 935px) {
   .currency {
     flex-direction: column;
